--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,18 @@
-Sup
+## Thanks for downloading my mod ##
+
+Please read the following line and my terms of service.
+- This vehicle is optimized for FiveM. I will not give any support in making it work in singleplayer. 
+
+## TERMS OF SERVICE ##
+By downloading my mods you agree to these Terms of Service:
+
+- Do not claim my work as your own.  
+- You may use my releases to create content with credits given (such as liveries). 
+- You do not have my permission to physically modify or redistribute my mods.
+- You are not allowed to leak, rip or steal my mods.
+  
+If you break the Terms of Service there may be legal steps against you aswell as a ban from every service we provide. You will also be reported to Protect The Developers and other Ban Databases.
+
+
+## SUPPORT ##
+You can get support by joining my discord server: https://discord.gg/RyyUMxaczn
